# openpbso

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ModalMaterial.h  ModalODESolver.cpp  ModalODESolver.h  ModeData.cpp  ModeData.h  README.md  cmd_parser.h  config.h  ffat_map.proto  ffat_map_serialize.h  ffat_solver.h  forces.h  io.cpp  io.h  main.cpp  modal_integrator.h  modal_solver.h
cmake/: FindLIBIGL.cmake  FindPortaudio.cmake
python/: ar.py  convert_features_to_binary.py  create_training_set.py  features.py  plot_bar.py  read_training_set.py  train.py  util.py
scripts/: ar.py  download.py  features.py  prepare_meta.sh  remove_head_frames.py  util.py
scripts/sklearn/: test_linearSVM.py
tools/: matcap_shader.h  real_time_modal_sound.cpp  register_segmentation.cpp  render_fields.cpp  simulator.cpp  test_loadmap.cpp  test_serialize.cpp  viz_segmentation.cpp
